Add multiple features
- Allow changing tuning speed to account for different kinds of servers
- Allow adjusting expected packet rate limits
- Assume some ping, when server reports 0 to prevent issues when tuning on those